--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,11 @@
   <!-- </plugin> -->
   <!-- </plugins> -->
   <!-- </build> -->
+  
+  <properties>
+    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
 
   <dependencies>
     <dependency>
